--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -4,7 +4,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        2022-11-27
+// @UpdateTime        2022-12-02
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
@@ -478,7 +478,8 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
 # > WeChat
 ^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 # > Weifeng
-^https:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
+^https?:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
+^https?:\/\/api\.wfdata\.club\/v\d\/search\/hot\? url reject-200
 # > Weico
 ^https?:\/\/overseas.weico.cc\/portal.php\?a=get_coopen_ads url reject
 # > wangyiwoniudushu
