--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -479,7 +479,7 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
 ^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 # > Weifeng
 ^https?:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
-^https?:\/\/api\.wfdata\.club\/v\d\/search\/hot\? url reject-200
+^https?:\/\/api\.wfdata\.club\/v\d\/search\/hot\? url response-body dataList":\[.+\] response-body dataList":[{}]
 # > Weico
 ^https?:\/\/overseas.weico.cc\/portal.php\?a=get_coopen_ads url reject
 # > wangyiwoniudushu
