--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -9,8 +9,8 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-11-18
-// @ConfigVersion     V0.0.85
+// @UpdateTime        2022-12-05
+// @ConfigVersion     V0.0.86
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -58,6 +58,7 @@
 //2022-10-02 35、B站解锁普通视频高码率仅适用国区粉色APP，外区为自我安慰
 //2022-11-04 36、修改B站首页右上角活动屏蔽方式，对应第30条，新的无需卸载重装@shiro
 //2022-11-18 37、屏蔽直播间商品广告浮窗@ddgksf2013
+//2022-12-05 38、去除推荐页顶部的banner,修复追番与观影页面打开时app闪退的bug，修复开屏脚本提示错误
 
 
 hostname = app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net
