--- a/Function/Douban.conf
+++ b/Function/Douban.conf
@@ -16,7 +16,7 @@
 
 hostname = m.douban.com
 
-// 茶杯狐、Libvio 流媒体
+# > 茶杯狐、Libvio 流媒体
 ^https://m.douban.com/movie/subject/.+ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/douban.js
-// Airtable 收藏
+# > Airtable 收藏
 ^https://m.douban.com/movie/subject/.+\?seen=\d url script-request-header https://github.com/ddgksf2013/Scripts/raw/master/douban.js
