--- a/Function/Bilibili_CC.conf
+++ b/Function/Bilibili_CC.conf
@@ -2,8 +2,8 @@
 // @Name              哔哩哔哩繁体CC字幕转中文简体
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
-// @WechatID          公众号墨鱼手记
-// @UpdateTime        2022-04-02
+// @WechatID          墨鱼手记
+// @UpdateTime        2022-11-28
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Function/Bilibili_CC.conf
 // ==/UserScript==
 
