--- a/AdBlock/WeiboLite.conf
+++ b/AdBlock/WeiboLite.conf
@@ -6,7 +6,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-10
+// @UpdateTime        2022-12-12
 // @Attention         使用配置前一定要卸载应用重新安装，配置好后，再打开微博轻享版
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
@@ -23,7 +23,7 @@ hostname = *api.weibo*,sdkapp.uve.weibo.com
 # ～ WeiboLite_微博国际版_热推荐@ddgksf2013
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/ad\/weibointl\? url reject-dict
 # ～ WeiboLite_微博国际版_sdkad@ddgksf2013
-https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php  url reject-dict
+https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # ～ WeiboLite_微博国际版_屏蔽search_suggest@ddgksf2013 
 # ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/page\/get_search_suggest url reject-dict
 # ～ WeiboLite_微博国际版_屏蔽searching_info@ddgksf2013
