--- a/AdBlock/WeiboLite.conf
+++ b/AdBlock/WeiboLite.conf
@@ -15,9 +15,7 @@
 // ==/UserScript==
 
 
-hostname = *api.weibo*,sdkapp.uve.weibo.com,*gdt.qq.com
-# ～ WeiboLite_微博国际版_屏蔽开屏广告@ddgksf2013
-^https?:\/\/.*gdt\.qq\.com\/gdt url reject-200
+hostname = *api.weibo*,sdkapp.uve.weibo.com
 # ～ WeiboLite_微博国际版_用户中心@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=user_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # ～ WeiboLite_微博国际版_hot_search@ddgksf2013
