--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,6 +11,7 @@
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
+// @Version           V2.0.1
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -44,7 +45,7 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 # > 微博国际版_屏蔽searching_info@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*user&a=get_searching_info url echo-response text/html echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_search_info.json
 # > 微博国际版_屏蔽search_topic@ddgksf2013 
-^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=search_topic url script-echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=search_topic url echo-response text/html echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_search_topic.json
 # > 微博国际版_屏蔽开屏广告@ddgksf2013 
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*ads url reject-dict
 # > 微博&国际版_sdkad@ddgksf2013
