--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-12
+// @UpdateTime        2022-12-13
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.1
+// @Version           V2.0.2
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -19,7 +19,7 @@
 
 
 
-hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
+hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn,mi.gdt.qq.com
 
 # > 微博_自定义tab皮肤@zmqcherish
 ^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
@@ -53,3 +53,5 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=trends url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_用户中心@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=user_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
+# > 微博国际版_屏蔽开屏广告补充
+^https:\/\/mi\.gdt\.qq\.com\/gdt_mview\.fcg url reject-200
