--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -54,4 +54,4 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn,mi.gdt.qq.com
 # > 微博国际版_用户中心@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=user_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_屏蔽开屏广告补充
-^https:\/\/mi\.gdt\.qq\.com\/gdt_mview\.fcg url reject-200
+^https:\/\/mi\.gdt\.qq\.com\/gdt_mview\.fcg url reject
