--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -20,7 +20,6 @@
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
-# > 微博国际版去开屏广告需要搭配通用去广告联盟分流使用
 # > 微博_自定义tab皮肤@zmqcherish
 ^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_非会员设置tab皮肤@zmqcherish
@@ -46,7 +45,7 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 # > 微博国际版_屏蔽search_topic@ddgksf2013 
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=search_topic url echo-response text/html echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_search_topic.json
 # > 微博国际版_屏蔽开屏广告@ddgksf2013 
-^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*ads url reject-dict
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*get_coopen_ads url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博&国际版_sdkad@ddgksf2013
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_趋势顶部CARD去广告@ddgksf2013
