--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.4
+// @Version           V2.0.5
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -20,6 +20,8 @@
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
+# > 微博_请手动添加以下分流至本地
+#host, sdkapp.uve.weibo.com, direct
 # > 微博_自定义tab皮肤@zmqcherish
 ^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_非会员设置tab皮肤@zmqcherish
