--- a/AdBlock/YoutubeAds.conf
+++ b/AdBlock/YoutubeAds.conf
@@ -1,8 +1,9 @@
 ########################################
 #应用名称：  Youtube Block AD
 #脚本作者：  @DivineEngine,@app2smile,@Maasea,@ddgksf2013
-#更新时间：  2022-11-27
+#更新时间：  2022-12-16
 #使用说明：  用于视频、瀑布流、搜索、播放页、短视频及贴片广告，不适用允许 UDP 转发的节点及 Premium
+#使用说明：  在QuantumultX配置文件的[general]下添加 udp_whitelist=53,123,81-442,444-65535
 #通知频道：  https://t.me/ddgksf2021
 #原始仓库：  https://github.com/DivineEngine
 #原始仓库：  https://github.com/Maasea
