--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,7 +6,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-16
+// @UpdateTime        2022-12-17
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
@@ -45,7 +45,7 @@
 # [+]2022-12-16  27、请手动添加后面的分流至本地 host, sdkapp.uve.weibo.com, direct
 # [+]2022-12-16  28、删除主页顶部“#记录周五的开心时刻#”，去除搜索页面“实况热聊”栏以及group栏
 # [+]2022-12-16  29、删除微博评论详情页面最底部的“已过滤不当言论，部分评论暂不展示”等文字
-
+# [-]2022-12-17  30、脚本weibo_json.js已解除限制，其它工具诸如surge、Loon亦可使用
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
