--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -10,7 +10,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！
 // @Attention         此配置不包含任何银行类APP的去广告
-// @Version           V2.0(0.0.180)
+// @Version           V2.0(0.0.181)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -83,8 +83,6 @@ hostname = gateway.shouqiev.com, res.pizzahut.com.cn, api.caijingmobile.com, 3g.
 # ======= C ======= #
 # > clicli
 ^https?:\/\/js-ad\.ayximgs\.com\.ad-universe-cdn\.hzhcbkj\.cn\/xgapp\.php\/v2\/top_notice url reject-200
-# > chinabank
-^https?:\/\/mbs\.boc\.cn\/ubas-mgateway-static\/images\/advertType\/.+.jpg url reject-200
 # > chelaile@ddgksf2013
 ^https?:\/\/cdn\.\w{3}\.chelaileapp\.cn\/(api\/)?adpub url reject-dict
 ^https?:\/\/api.chelaile.net.cn\/adpub\/ url reject
@@ -606,3 +604,5 @@ https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject
 ^https?+:\/\/ih2\.ireader\.com\/zyapi\/bookstore\/ad url reject
 ^https?+:\/\/ih2\.ireader\.com\/zyapi\/self\/screen\/ad url reject
 ^https?+:\/\/ih2\.ireader\.com\/zycl\/api\/ad url reject
+# > zhongguobank
+^https?:\/\/mbs\.boc\.cn\/ubas-mgateway-static\/images\/advertType\/.+.jpg url reject-200
