--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-21
+// @UpdateTime        2022-12-23
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.10
+// @Version           V2.0.11
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -49,11 +49,14 @@
 # [+]2022-12-18  31、优化超话tab看帖页面，保留搜索(去除自动填充内容)及感兴趣的超话以及去除一些无关group和card
 # [+]2022-12-20  32、删除超话搜索栏目下方的“可能感兴趣”、“热门超话”、“影视超话”、“游戏超话”等card
 # [+]2022-12-21  33、去除搜索页面tab中热搜下面一排圆圈图标内容
+# [+]2022-12-23  34、屏蔽hot_hours_spotlight请求
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 # > 微博_请手动添加以下分流至本地
 #host, sdkapp.uve.weibo.com, direct
+# > 微博_Spotlight@ddgksf2013
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/hot\/hours_spotlight url reject-dict
 # > 微博_自定义tab皮肤@zmqcherish
 ^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_非会员设置tab皮肤@zmqcherish
@@ -82,8 +85,7 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*get_coopen_ads url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博&国际版_sdkad@ddgksf2013
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
-# > 微博国际版_趋势顶部CARD去广告@ddgksf2013
+# > 微博国际版_趋势顶部Card去广告@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=trends url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_用户中心@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=user_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
-   
