--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-23
+// @UpdateTime        2022-12-24
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.11
+// @Version           V2.0.12
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -45,11 +45,13 @@
 # [+]2022-12-16  27、请手动添加后面的分流至本地 host, sdkapp.uve.weibo.com, direct
 # [+]2022-12-16  28、删除主页顶部“#记录周五的开心时刻#”，去除搜索页面“实况热聊”栏以及group栏
 # [+]2022-12-16  29、删除微博评论详情页面最底部的“已过滤不当言论，部分评论暂不展示”等文字
-# [-]2022-12-17  30、脚本weibo_json.js已解除限制，其它工具诸如surge、Loon亦可使用
+# [-]2022-12-17  30、脚本weibo_json.js已解除限制，其它工具诸如surge、Loon、小火箭亦可使用
 # [+]2022-12-18  31、优化超话tab看帖页面，保留搜索(去除自动填充内容)及感兴趣的超话以及去除一些无关group和card
 # [+]2022-12-20  32、删除超话搜索栏目下方的“可能感兴趣”、“热门超话”、“影视超话”、“游戏超话”等card
 # [+]2022-12-21  33、去除搜索页面tab中热搜下面一排圆圈图标内容
 # [+]2022-12-23  34、屏蔽hot_hours_spotlight请求
+# [+]2022-12-24  35、修复主页浏览动态微博时广告图片的空白占位问题，修复每日首次打开SearchTab页面广告轮播失效问题
+# [+]2022-12-24  36、删除发现页下拉刷新时的背景广告图片，瞬间清爽
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
@@ -71,9 +73,9 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/search/(finder|container_timeline|container_discover) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(checkin/show|\!/live/media_homelist|comments/build_comments|container/get_item) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/cardlist url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
-# > 微博国际版_hot_search@ddgksf2013
+# > 微博国际版_屏蔽hotsearch@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php\?a=hot_search_users url reject-dict
-# > 微博国际版_热推荐@ddgksf2013
+# > 微博国际版_屏蔽热推荐@ddgksf2013
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/ad\/weibointl\? url reject-dict
 # > 微博国际版_屏蔽search_suggest@ddgksf2013
 # ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/page\/get_search_suggest url reject-dict
@@ -83,9 +85,9 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=search_topic url echo-response text/html echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_search_topic.json
 # > 微博国际版_屏蔽开屏广告@ddgksf2013 
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*get_coopen_ads url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
-# > 微博&国际版_sdkad@ddgksf2013
+# > 微博国际版_屏蔽sdkad@ddgksf2013
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_趋势顶部Card去广告@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=trends url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
-# > 微博国际版_用户中心@ddgksf2013
+# > 微博国际版_屏蔽用户VIP栏@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=user_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
