--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.12
+// @Version           V2.0.13
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -52,6 +52,8 @@
 # [+]2022-12-23  34、屏蔽hot_hours_spotlight请求
 # [+]2022-12-24  35、修复主页浏览动态微博时广告图片的空白占位问题，修复每日首次打开SearchTab页面广告轮播失效问题
 # [+]2022-12-24  36、删除发现页下拉刷新时的背景广告图片，瞬间清爽
+# [+]2022-12-24  37、删除微博短视频流中的广告，让你无广告享受刷短视频的快感
+
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
