--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -6,11 +6,10 @@
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        2022-12-25
 // @Please            如需引用请注明出处，谢谢合作！
-// @Function          去除APP首页启动广告和应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
+// @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！
-// @Attention         此配置不包含任何银行类APP的去广告
-// @Version           V2.0(0.0.184)
+// @Version           V2.0(185)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
