--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -4,12 +4,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        2022-12-25
+// @UpdateTime        2022-12-26
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！
-// @Version           V2.0(186)
+// @Version           V2.0(187)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -612,4 +612,4 @@ https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject
 ^https?+:\/\/ih2\.ireader\.com\/zyapi\/self\/screen\/ad url reject
 ^https?+:\/\/ih2\.ireader\.com\/zycl\/api\/ad url reject
 # > zhongguobank
-^https?:\/\/mbs\.boc\.cn\/ubas-mgateway-static\/images\/advertType\/.+.jpg url reject-200
+^https?:\/\/mbs\.boc\.cn\/ubas-mgateway-static\/images\/advertType\/.+.jpg url reject-img
