--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -11,7 +11,7 @@
 // @Attention         QuantumultX能去广告，不代表能去所有广告！
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
 // @Version           V2.0(198)
-// @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有
+// @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
 
