--- a/Html/Q-Search.conf
+++ b/Html/Q-Search.conf
@@ -2,11 +2,11 @@
 # - Safari 内输入以下格式命令快速指定搜索引擎
 # - 【命令+空格+关键词】或者【关键词+空格+命令】
 # - 注：请先进入设置更改 Safari 默认搜索为 DuckDuckGO
-# - 更新时间：2022-11-10
-# - 墨鱼自用全能搜索V2.0
+# - 更新时间：2022-12-28
+# - 墨鱼自用全能搜索V2.0(128)
 # - 公众号墨鱼手记
 # - 如需引用请注明出处-> https://t.me/ddgksf2021 谢谢合作！
-# - https://github.com/ddgksf2013/Rewrite/raw/master/Function/Q-Search.conf
+# - https://github.com/ddgksf2013/Rewrite/raw/master/Html/Q-Search.conf
 ##################################################################################################
 hostname = duckduckgo.com
 
