--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -19,10 +19,11 @@
 
 # ======= ~ ====== #
 
-#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、百度贴吧、知乎、什么值得买】去广告
+#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、百度贴吧、知乎、什么值得买】去广告
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
+;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf
 ;https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf
 ;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/zhihu/zhihu_plus.qxrewrite
 ;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/smzdm/smzdm_remove_ads.qxrewrite
