--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -261,7 +261,7 @@ https://jdread-api.jd.com/jdread/api/popup url reject-200
 ^https?:\/\/img\.jiemian\.com\/ads\/ url reject
 # > jinshi
 ^https?:\/\/jad-api\.jin10\.com\/ad url reject
-# > JsCMCC
+# > Jiangsuyidong
 ^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
 # > jijianhuilv
 ^https?:\/\/explorer\.tratao\.com\/api\/client\/v4\/xtransfer\/ad\/ url reject
@@ -455,7 +455,7 @@ https://apis.lifeweek.com.cn/api/baseConfig/getIosNewConfig url reject
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryInfoFlow url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/shunfeng_json.js
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reject-dict
 ^https?:\/\/shopic\.sf-express\.com\/crm\/mobile\/common\/flashscreen url reject
-# > ShanDongCMCC
+# > ShanDongyidong
 https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url reject-dict
 # > shihuo
 ^https?:\/\/sh-gateway\.shihuo\.cn\/v\d\/services\/sh-adapi\/home\/screen url reject-200
