--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -183,8 +183,6 @@ https://zone.guiderank-app.com/guiderank-web/app/ad/listLaunchADByCity.do url re
 https://guanyu.longfor.com/app-server/api/v1/main/start url reject
 # > guangqibentian
 ^https?:\/\/gha\.ghac\.cn\:8081\/base\/app\/api\/ad\/query\?adType url reject-200
-# > guangdongyidong
-^https?:\/\/gd\.10086\.cn\/gmccapp\/serv\/\?servicename=GMCCAPP_704_002_001_001 url reject-200
 # > guojiadili
 ^https?:\/\/dili\.bdatu\.com\/jiekou\/ad url reject
 ^https?+:\/\/wap\.ngchina\.cn\/news\/adverts url reject
@@ -261,8 +259,6 @@ https://jdread-api.jd.com/jdread/api/popup url reject-200
 ^https?:\/\/img\.jiemian\.com\/ads\/ url reject
 # > jinshi
 ^https?:\/\/jad-api\.jin10\.com\/ad url reject
-# > Jiangsuyidong
-^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
 # > jijianhuilv
 ^https?:\/\/explorer\.tratao\.com\/api\/client\/v4\/xtransfer\/ad\/ url reject
 # > jiaxiaoediantong
@@ -455,8 +451,6 @@ https://apis.lifeweek.com.cn/api/baseConfig/getIosNewConfig url reject
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryInfoFlow url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/shunfeng_json.js
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reject-dict
 ^https?:\/\/shopic\.sf-express\.com\/crm\/mobile\/common\/flashscreen url reject
-# > ShanDongyidong
-https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url reject-dict
 # > shihuo
 ^https?:\/\/sh-gateway\.shihuo\.cn\/v\d\/services\/sh-adapi\/home\/screen url reject-200
 # > Soul
@@ -626,6 +620,12 @@ https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject
 # > zhongguoyidong
 ^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/init\/startInit url reject-200
 ^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/explorePage\/getAdverList url reject-200
+# > zhongguoyidongjiangsu
+^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
+# > zhongguoyidongshandong
+https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url reject-dict
+# > zhongguoyidongguangdong
+^https?:\/\/gd\.10086\.cn\/gmccapp\/serv\/\?servicename=GMCCAPP_704_002_001_001 url reject-200
 # > zhaoshangyinhang
 ^https?:\/\/webappcfg\.paas\.cmbchina\.com\/v1\/func\/getmarketconfig url reject-200
 # > zhongguoliantong
