--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -10,7 +10,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Version           V2.0(208)
+// @Version           V2.0(213)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -633,7 +633,7 @@ https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url rejec
 ^https?:\/\/m\.client\.10010\.com\/uniAdmsInterface\/(getHomePageAd|getWelcomeAd) url reject-200
 # > zhongguoyidongguangxi
 ^https?:\/\/gx\.10086\.cn\/zt-portal\/gxhzg\/portal\/app\/api\/v url reject-200
-# > zhongguoyidonganhui
+# > zhongguoyidonganhui*
 ^https?:\/\/api\.ahmobile\.cn:443\/eip\?eip_serv_id=app\.getAllNew url reject-200
 # > zhuanzhuan
 ^https?:\/\/app\.zhuanzhuan\.com\/zzx\/transfer\/getConfigInfo url reject-dict
