--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-27
+// @UpdateTime        2022-12-29
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.15
+// @Version           V2.0.16
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -55,7 +55,7 @@
 # [+]2022-12-24  37、删除微博短视频流中的广告，让你无广告享受刷短视频的快感
 # [+]2022-12-25  38、删除搜索页面热搜顶部偶尔出现的HotSearchPush
 # [+]2022-12-27  39、删除微博用户页“可能感兴趣的人”内容
-
+# [+]2022-12-29  40、删除微博信息流中商品橱窗内容（并未将整个CARD一起删除）
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
