--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -10,7 +10,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：194）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Version           V2.0(216)
+// @Version           V2.0(217)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -513,8 +513,8 @@ https://mapi.appvipshop.com/vips-mobile/rest/activity/advertisement/get url reje
 ^https:\/\/mapi\.appvipshop\.com\/vips-mobile\/rest\/iosAdInfo\/report url reject
 # > WangYiDaShen
 ^https?:\/\/god\.gameyw\.netease\.com\/v\d\/ad\/serving\/app-start url reject
-# > WangYiMusic
-^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
+# > WangYiyunyinyue
+#^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
 # > WangYiYouXiang
 ^https?:\/\/appconf\.mail\.163\.com\/mmad\/get\.do url reject
 ^https?:\/\/client\.mail\.163.com\/apptrack\/confinfo\/(searchMultiAds.do|showAds.do) url reject
