--- a/AdBlock/Ximalaya.conf
+++ b/AdBlock/Ximalaya.conf
@@ -6,7 +6,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-08-23
+// @UpdateTime        2022-12-31
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
@@ -16,6 +16,8 @@
 
 
 hostname = *.xima*.*, *.xmcdn.*
+# ～ XiMaLaYa_喜马拉雅_NDS@ddgksf2013
+^https?:\/\/gslb.*xima.*\.com\/, reject
 # ～ XiMaLaYa_喜马拉雅_修复轮播Ad失效Bug@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF url reject
 # ～ XiMaLaYa_喜马拉雅_播放页_Live@ddgksf2013
