--- a/AdBlock/Ximalaya.conf
+++ b/AdBlock/Ximalaya.conf
@@ -16,8 +16,8 @@
 
 
 hostname = *.xima*.*, *.xmcdn.*
-# ～ XiMaLaYa_喜马拉雅_NDS@ddgksf2013
-^https?:\/\/gslb.*xima.*\.com\/, reject
+# ～ XiMaLaYa_喜马拉雅_gslb@ddgksf2013
+^https?:\/\/gslb.*\.xima.*\.com\/ url reject
 # ～ XiMaLaYa_喜马拉雅_修复轮播Ad失效Bug@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF url reject
 # ～ XiMaLaYa_喜马拉雅_播放页_Live@ddgksf2013
