--- a/AdBlock/Ximalaya.conf
+++ b/AdBlock/Ximalaya.conf
@@ -52,7 +52,9 @@ hostname = *.xima*.*, *.xmcdn.*
 ^https?:\/\/.*\.xima.*\.com\/api\/v\d\/adRealTime url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽ting_Ad@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/ting\/(loading|feed|home)? url reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽首页滚动_Ad@ddgksf2013
+# ～ XiMaLaYa_喜马拉雅_屏蔽首页横幅_Ad@ddgksf2013
+^https?:\/\/.*\.xima.*\.com\/focus-mobile\/focusPic url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xmly_json.js
+# ～ XiMaLaYa_喜马拉雅_屏蔽首页动态_Ad@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xmly_json.js
 # ～ XiMaLaYa_喜马拉雅_屏蔽Tab页滚动_Ad@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xmly_json.js
