--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -10,7 +10,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：195）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Version           V2.0(218)
+// @Version           V2.0(219)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -656,7 +656,7 @@ https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url rejec
 ^https?+:\/\/ih2\.ireader\.com\/zyapi\/bookstore\/ad url reject
 ^https?+:\/\/ih2\.ireader\.com\/zyapi\/self\/screen\/ad url reject
 ^https?+:\/\/ih2\.ireader\.com\/zycl\/api\/ad url reject
-# > zhongguobank
+# > zhongguoyinhang
 #^https?:\/\/mbs\.boc\.cn\/ubas-mgateway-static\/images\/advertType\/.+.jpg url reject-img
 
 
