--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -10,7 +10,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：196）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Version           V2.0(221)
+// @Version           V2.0(222)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -207,7 +207,7 @@ https://guanyu.longfor.com/app-server/api/v1/main/start url reject
 # > hongbanbao
 https://fbchina.flipchina.cn/v2/ad/query/* url reject
 # > huyazhibo
-^http?:\/\/business\.msstatic\.com\/advertiser\/material url reject-dict
+^https?:\/\/business\.msstatic\.com\/advertiser\/material url reject-dict
 # > haoqixinribao
 ^https?:\/\/app3\.qdaily\.com\/app\d\/boot_advertisements\.json url reject
 # > huxiu
@@ -215,7 +215,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 # > huangyouxiangji
 ^https?:\/\/api4\.bybutter\.com\/v\d\/app\/placements\/\d\/advertisements url reject
 # > hanglvzongheng
-^http?:\/\/(discardrp|startup)\.umetrip\.com\/gateway\/api\/umetrip\/native url reject
+^https?:\/\/(discardrp|startup)\.umetrip\.com\/gateway\/api\/umetrip\/native url reject
 # > hangzhougongjiao
 ^https?:\/\/m.ibuscloud.com\/v2\/app\/getStartPage url reject
 # > haohaozhu
@@ -471,12 +471,12 @@ https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reje
 # > tianfutong
 ^https?:\/\/tft-app\.cdtft\.cn\/gateway-customer\/tftapp\/tft-ams\/api\/appAd url response-body officialAdvertResultVo response-body ddgksf2013
 # > tianxingjinrong
-^http?:\/\/t1\.market\.xiaomi\.com\/thumbnail\/webp\/w1170q100\/ url reject-200
+^https?:\/\/t1\.market\.xiaomi\.com\/thumbnail\/webp\/w1170q100\/ url reject-200
 # > tianyiyunpan
 ^https?:\/\/api\.cloud\.189\.cn\/guns\/getOpenscreenBanners url reject
 # > tianmaojingling
 ^https?:\/\/zconfig\.alibabausercontent\.com\/zconfig url reject
-^http?:\/\/g\.alicdn\.com\/living\/mesh-std-spec url reject
+^https?:\/\/g\.alicdn\.com\/living\/mesh-std-spec url reject
 # > testflight
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
 # > TengXunShouJiGuanJia
