--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -10,7 +10,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：195）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Version           V2.0(223)
+// @Version           V2.0(224)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -19,7 +19,7 @@
 
 # ======= ~ ====== #
 
-#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、百度贴吧、知乎、什么值得买】去广告
+#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、百度贴吧、知乎、什么值得买、Keep】去广告
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
@@ -27,6 +27,7 @@
 ;https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf
 ;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/zhihu/zhihu_plus.qxrewrite
 ;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/smzdm/smzdm_remove_ads.qxrewrite
+;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
 
 
 # ======= 0~9 ======= #
