--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-05
+// @UpdateTime        2023-01-06
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.44
+// @Version           V2.0.45
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -59,6 +59,7 @@
 # [+]2023-01-01  41、删除微博首页顶部感兴趣的人group推荐，并兼容微博国际版
 # [+]2023-01-03  42、去除微博国际版热搜列表的置顶内容
 # [+]2023-01-05  43、添加屏蔽sdkconfig请求及应用内弹窗广告请求
+# [+]2023-01-06  44、去除微博我的页面中Myname后面的续费VIP_Icon内容
 
 
 
