--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -61,7 +61,7 @@
 //2022-12-05 38、去除推荐页顶部的banner,修复追番与观影页面打开时app闪退的bug，修复开屏脚本提示错误
 //2022-12-09 39、去除皮肤设置重写，以防与新的皮肤设置脚本冲突
 //2022-12-15 40、将动态tab页面的最长访问恢复，脚本改动已于app2smile原创不一致，请自行选择使用
-//2023-01-06 41、压缩并优化B站脚本内容，大小有24kb->5kb
+//2023-01-06 41、压缩并优化B站脚本内容，大小由24kb->5kb
 
 hostname = app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net
 
