--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -279,8 +279,7 @@ https://jdread-api.jd.com/jdread/api/popup url reject
 # > ku'an
 ^https?:\/\/api\.coolapk\.com\/v6\/(feed\/(replyList|detail)|main\/indexV8|dataList) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/coolapk.js
 ^https?://api-access\.pangolin-sdk-toutiao\.com/api/ad/union/sdk url reject
-# > kuan
-^https?:\/\/api\.coolapk\.com\/v6\/search\?.*type=hotSearch url reject
+^https?:\/\/api\.coolapk\.com\/v6\/search\?.*type=hotSearch url reject-dict
 # > kanlixiang
 ^https?:\/\/api\.vistopia\.com\.cn\/api\/v\d\/home\/advertisement url reject
 # > kantianxia
