--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-06
+// @UpdateTime        2023-01-08
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.46
+// @Version           V2.0.47
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -60,6 +60,7 @@
 # [+]2023-01-03  42、去除微博国际版热搜列表的置顶内容
 # [+]2023-01-05  43、添加屏蔽sdkconfig请求及应用内弹窗广告请求
 # [+]2023-01-06  44、去除微博我的页面中Myname后面的续费VIP_Icon内容
+# [+]2023-01-08  45、屏蔽发现页面顶部搜索框热词，将热词恢复为‘搜索’
 
 
 
@@ -67,6 +68,8 @@
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 # > 微博_请手动添加以下分流至本地
 #host, sdkapp.uve.weibo.com, direct
+# > 微博_屏蔽发现页面搜索框热词@ddgksf2013
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/\w{5}\/cardlist url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_应用内弹窗广告@ddgksf2013
 ^https?:\/\/(preload-click|preload-impression)\.uve\.weibo\.com\/(interface\/wbpullad\/wbpullad_click\.php|wbapplua\/get_wbpullad_log\.lua) url reject
 # > 微博_屏蔽sdkconfig请求@ddgksf2013
